--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^0.16.1",
+    "fastclick": "^1.0.6",
     "flexible": "^0.1.20",
     "vue": "^2.2.2",
     "vue-axios": "^2.0.2",
